Fix menu label colour contrast
TTF-637

--- a/app/shared/components/Button/style.scss
+++ b/app/shared/components/Button/style.scss
@@ -111,7 +111,6 @@
   border-radius: 0;
   margin-top: -.5rem;
   font-size: 1.3rem;
-  color: $gray-500;
   position: absolute;
   right: 3rem;
 
